# better_opts_attacks

./: .experiment.py.swp  .gitignore  .gitmodules  README.md  README_gcg_enhanced.md  __init__.py  adversarial_opt.py  attack_utility.py  break_defences.py  case_study_gpt_oss.ipynb  diagnosis.ipynb  experiment copy.py  experiment.py  experiment_agentdojo.ipynb  experiment_agentdojo.py  experiment_gpt_oss.py  experiment_logger.py  experiment_struq.py  experiment_tool_use.py  experiment_universal.py  experiment_universal_ih.ipynb  gcg.py  gcg_unguided_comp.py  initial_setup.py  kernel_distance_opt.py  llama_struq_break.py  losses_experimental.ipynb  losses_experimental.py  pyproject.toml  requirements.txt  run_gcg_enhanced.py  setup.bash  weightings_compare.py
algorithms/: .losses_experimental.py.swp  autodan.py  embed_snap.py  gcg.py  gcg_enhanced.py  losses_experimental.py  randomness_experimental.py  universal_astra.py
analysis/: analysis.ipynb  analysis_universal.ipynb  attention_heads_weights_explore.ipynb  attn_heads_weight_explore.py  gradients_explore.py  gradients_study.py  ideal_atts_explore.py  path_explore.py  print_exactly_hacked_repeat.ipynb  time_evol_sens.ipynb
betteroptsattack/: __init__.py  run_enhanced.py  test_samples.py
betteroptsattack/algorithms/: gcg.py  gcg_enhanced.py  losses_experimental.py  randomness_experimental.py  universal_astra.py
betteroptsattack/utils/: attack_utility.py  experiment_logger.py
data/: ppllama_print_hacked.json  purplellama.json  purplellama_indirect.json  universal_pis_secalign++.json
secalign_refactored/: __init__.py  secalign.py
secalign_refactored/secalign_raw_code/: struq.py  test.py  train.py
setup_scripts/: download_models.py  runpod_setup.bash  runpod_setup.py
utils/: .attack_utility.py.swp  attack_utility.py  experiment_logger.py
