[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "betteroptsattack"
authors = [{name = "David Hofer", email = "your.email@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.1.0"
description = "Enhanced GCG Attack Implementation for Language Model Robustness Evaluation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "dill",
    "trl",
    "accelerate",
    "peft",
    "pandas",
    "python-dotenv",
    "huggingface_hub[cli]",
    "hf_transfer",
    "bitsandbytes",
    "fschat",
    "sentencepiece",
    "protobuf>=3.20.0",  # Added to fix Vicuna issue
    "agentdojo[transformers]",
    "gpt-oss[torch]",
    "matplotlib",
    "seaborn",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "ipython>=8.0",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/betteroptsattack"
Repository = "https://github.com/yourusername/betteroptsattack.git"
Issues = "https://github.com/yourusername/betteroptsattack/issues"

[project.scripts]
gcg-attack = "betteroptsattack.cli:main"
gcg-enhanced = "betteroptsattack.run_enhanced:main"

[tool.flit.module]
name = "betteroptsattack"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]